--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,3 @@
-
-
 .hooks-main > div::after {
   content: '';
   position: absolute;
@@ -10,27 +8,17 @@
   border-radius: 50%;
 }
 
-.hooks-main > div:nth-child(2)::after {
-  top: 70px;
-  left: 70px;
-  width: 70px;
-  height: 70px;
-}
-
-.hooks-main > div:nth-child(3)::after {
-  top: 50px;
-  left: 50px;
-  width: 50px;
-  height: 50px;
-}
-
 .hooks-main {
+  background-color: lightgoldenrodyellow;
   z-index: -1;
-  animation: colorchange 5s infinite; 
   position: absolute;
   width: 100%;
   height: 100%;
   overflow: hidden;
+}
+
+#home {
+  animation: colorchange 5s infinite; 
 }
 
 @keyframes colorchange
