added some links

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,7 @@
 }
 
 .hooks-main {
-  background-color: lightgoldenrodyellow;
+  background-color: royalblue;
   z-index: -1;
   position: absolute;
   width: 100%;
