--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,9 @@
+body {
+  margin: 0;
+  background-color: rgb(0,0,0);
+  color: white;
+}
+
 .hooks-main > div::after {
   content: '';
   position: absolute;
