fixing main screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,7 @@ body {
 }
 
 .hooks-main {
-  background-color: royalblue;
+  background-color: black;
   z-index: -1;
   position: absolute;
   width: 100%;
